// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component can be nested within Text and Heading 1`] = `
@media  {
  .c-gyuptP {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-gyuptP:focus,
  .c-gyuptP:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-gyuptP:active {
    color: var(--colors-primaryDark);
  }

  .c-gyuptP[disabled] disabledStyle {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-gyuptP[disabled] {
    pointer-events: none;
  }

  .c-dyvMgW > .c-gyuptP,
  .c-jryFOR > .c-gyuptP,
  .c-PJLV > .c-gyuptP,
  .c-bYNGXt > .c-gyuptP {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-gyuptP::before,
  .c-dyvMgW > .c-gyuptP::after,
  .c-jryFOR > .c-gyuptP::before,
  .c-jryFOR > .c-gyuptP::after,
  .c-PJLV > .c-gyuptP::before,
  .c-PJLV > .c-gyuptP::after,
  .c-bYNGXt > .c-gyuptP::before,
  .c-bYNGXt > .c-gyuptP::after {
    content: none;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-jryFOR {
    font-family: var(--fonts-display);
    font-weight: 700;
    margin: 0;
  }
}

@media  {
  .c-gyuptP-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-gyuptP-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-gyuptP-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-gyuptP-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-gyuptP-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-gyuptP-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }

  .c-gyuptP-fmPQHp-noCapsize-true::before,
  .c-gyuptP-fmPQHp-noCapsize-true::after {
    display: none !important;
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md {
    font-size: var(--fontSizes-xl);
    line-height: 1.14;
  }

  .c-jryFOR-fOoUdm-size-md::before {
    content: '';
    margin-bottom: -0.2174em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md::after {
    content: '';
    margin-top: -0.2254em;
    display: table;
  }
}

<div>
  <p
    class="c-dyvMgW c-dyvMgW-gvmVBy-size-md"
  >
    <button
      class="c-gyuptP c-gyuptP-gvmVBy-size-md c-gyuptP-fmPQHp-noCapsize-true"
    >
      TEXT LINK
    </button>
  </p>
  <h2
    class="c-jryFOR c-jryFOR-fOoUdm-size-md"
  >
    <button
      class="c-gyuptP c-gyuptP-gvmVBy-size-md c-gyuptP-fmPQHp-noCapsize-true"
    >
      HEADING LINK
    </button>
  </h2>
</div>
`;

exports[`Link component renders an anchor 1`] = `
@media  {
  .c-gyuptP {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-gyuptP:focus,
  .c-gyuptP:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-gyuptP:active {
    color: var(--colors-primaryDark);
  }

  .c-gyuptP[disabled] disabledStyle {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-gyuptP[disabled] {
    pointer-events: none;
  }

  .c-dyvMgW > .c-gyuptP,
  .c-jryFOR > .c-gyuptP,
  .c-PJLV > .c-gyuptP,
  .c-bYNGXt > .c-gyuptP {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-gyuptP::before,
  .c-dyvMgW > .c-gyuptP::after,
  .c-jryFOR > .c-gyuptP::before,
  .c-jryFOR > .c-gyuptP::after,
  .c-PJLV > .c-gyuptP::before,
  .c-PJLV > .c-gyuptP::after,
  .c-bYNGXt > .c-gyuptP::before,
  .c-bYNGXt > .c-gyuptP::after {
    content: none;
  }
}

@media  {
  .c-gyuptP-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-gyuptP-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-gyuptP-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

<div>
  <a
    class="c-gyuptP c-gyuptP-gvmVBy-size-md"
    href="https://google.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
@media  {
  .c-gyuptP {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-gyuptP:focus,
  .c-gyuptP:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-gyuptP:active {
    color: var(--colors-primaryDark);
  }

  .c-gyuptP[disabled] disabledStyle {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-gyuptP[disabled] {
    pointer-events: none;
  }

  .c-dyvMgW > .c-gyuptP,
  .c-jryFOR > .c-gyuptP,
  .c-PJLV > .c-gyuptP,
  .c-bYNGXt > .c-gyuptP {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-gyuptP::before,
  .c-dyvMgW > .c-gyuptP::after,
  .c-jryFOR > .c-gyuptP::before,
  .c-jryFOR > .c-gyuptP::after,
  .c-PJLV > .c-gyuptP::before,
  .c-PJLV > .c-gyuptP::after,
  .c-bYNGXt > .c-gyuptP::before,
  .c-bYNGXt > .c-gyuptP::after {
    content: none;
  }
}

@media  {
  .c-gyuptP-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-gyuptP-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-gyuptP-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-gyuptP-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-gyuptP-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-gyuptP-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }
}

<div>
  <a
    class="c-gyuptP c-gyuptP-jvTRJO-size-lg"
    href="https://google.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    GOOGLE
  </a>
</div>
`;
